<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.juddyreina.practica7.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_apprende"
            />
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/user"
            />
        <EditText
            android:id="@+id/etPassw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/pass"
            />
        <Button
            android:id="@+id/bIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/white"
            android:background="@color/steelblue"
            android:textSize="25sp"
            />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/bFB"
            android:layout_marginTop="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10sp"
            >
            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:background="@drawable/ic_google"
                />
            <Button
                android:id="@+id/bGoogle"
                android:layout_width="150sp"
                android:layout_height="30sp"
                android:text="@string/google"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:background="#A0FFFFFF"
                />

        </LinearLayout>

        <Button
            android:id="@+id/bRegistro"
            android:layout_marginTop="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register2"
            android:textSize="25sp"
            android:textColor="@color/whitesmoke"
            android:background="@color/steelblue"
            />

    </LinearLayout>


</ScrollView>
